Fixed spacing bug

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,5 +1,7 @@
-html {
+html,body {
   scroll-behavior: smooth;
+  width: 100%;
+  overflow-x:hidden;
 }
 
 #homepage{
